# crack-the-code-game

./: Dockerfile_pipenv  Dockerfile_poetry  README.rst  config.py  mypy.ini  pyproject.toml
app/: __init__.py  api.py  gamestate.py  storage_holder.py
app/static/js/: colors.js  main.js
app/storage/: __init__.py  base_storage.py  memory_storage.py  redis_storage.py
app/storages/: __init__.py  base_storage.py  memory_storage.py  redis_storage.py
app/templates/: index.html
crack_the_code_game/: api.py  gamestate.py  main.py
crack_the_code_game/static/: index.html
crack_the_code_game/static/css/: main.css
crack_the_code_game/static/js/: main.js  store.js
crack_the_code_game/templates/: index.html
